correct codemirror line wrapping

--- a/include/css/theme_content.scss
+++ b/include/css/theme_content.scss
@@ -468,5 +468,6 @@ a.add_layout{
 		border:0 none;
 		padding:0 4px;
 		margin:0;
+		white-space:pre;
 	}
 }
